[gd_scene format=3 uid="uid://82q0ebv4xggn"]

[ext_resource type="Script" uid="uid://borgvfd6r0pln" path="res://scenes/tasks/tubes/tubes.gd" id="1_neqou"]
[ext_resource type="Texture2D" uid="uid://bflq6dicqjepr" path="res://assets/tasks/tubes/tubes.png" id="2_j0qtb"]
[ext_resource type="Texture2D" uid="uid://e2chrfby1vx8" path="res://assets/hallway/final_room.png" id="2_nm65w"]
[ext_resource type="Texture2D" uid="uid://ditqn7nrfesqp" path="res://assets/tasks/tubes/signle_tube.png" id="3_5r5bb"]
[ext_resource type="StyleBox" uid="uid://dkvbc872e4gc6" path="res://shaders/hslider.tres" id="5_qo0lb"]
[ext_resource type="Texture2D" uid="uid://bl43wje06vfdu" path="res://assets/tasks/tubes/lepic_small.png" id="6_nm65w"]

[sub_resource type="Gradient" id="Gradient_1uryy"]
offsets = PackedFloat32Array(0, 0.97572815)
colors = PackedColorArray(1, 1, 0.2509804, 1, 1, 1, 0.2509804, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_qo0lb"]
gradient = SubResource("Gradient_1uryy")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qo0lb"]
bg_color = Color(1, 0.029999971, 0.029999971, 0.34901962)
border_width_right = 25
border_color = Color(0.8, 0.8, 0.8, 0)
corner_detail = 1
expand_margin_bottom = 21.0

[sub_resource type="Gradient" id="Gradient_nm65w"]
offsets = PackedFloat32Array(0.041353382, 1)
colors = PackedColorArray(0, 0.41882375, 2.8878452e-07, 1, 0.01118373, 0.19453055, 0.011045779, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_pxthx"]
gradient = SubResource("Gradient_nm65w")
fill = 1
fill_from = Vector2(0.45305166, 0.471831)

[node name="Tubes" type="Node2D" unique_id=339370251]
script = ExtResource("1_neqou")

[node name="BG" type="Sprite2D" parent="." unique_id=1110378202]
z_index = -4
position = Vector2(3434, 329)
scale = Vector2(3.1453483, 3.1453488)
texture = ExtResource("2_nm65w")

[node name="Camera2D" type="Camera2D" parent="." unique_id=878738393]
position = Vector2(573, 326)
scale = Vector2(1, 0.6800006)

[node name="Tubes" type="Sprite2D" parent="." unique_id=1160052258]
texture_filter = 1
position = Vector2(363, 303)
scale = Vector2(1.1484375, 0.53125)
texture = ExtResource("2_j0qtb")

[node name="Tubes2" type="Sprite2D" parent="." unique_id=1426240614]
texture_filter = 1
position = Vector2(559, 253)
rotation = 1.5707964
scale = Vector2(1.070465, 0.99722993)
texture = ExtResource("2_j0qtb")

[node name="Tubes3" type="Sprite2D" parent="." unique_id=270833501]
texture_filter = 1
position = Vector2(573, 45.00003)
rotation = -0.69751114
texture = ExtResource("2_j0qtb")

[node name="Tubes6" type="Sprite2D" parent="." unique_id=426192849]
texture_filter = 1
position = Vector2(1145.0427, 498.13855)
scale = Vector2(1.4293538, 1.8663381)
texture = ExtResource("2_j0qtb")

[node name="Tubes4" type="Sprite2D" parent="." unique_id=69742653]
texture_filter = 1
position = Vector2(779.8828, 498.92188)
scale = Vector2(1.6145301, 1.844894)
texture = ExtResource("2_j0qtb")

[node name="Tubes5" type="Sprite2D" parent="." unique_id=1740658863]
texture_filter = 1
position = Vector2(198.00002, 533)
scale = Vector2(2.953125, 4.0039063)
texture = ExtResource("2_j0qtb")

[node name="TubeSingle" type="Sprite2D" parent="." unique_id=1371076997]
texture_filter = 1
position = Vector2(90.99999, 326.00003)
scale = Vector2(1.0925926, 1.2746478)
texture = ExtResource("3_5r5bb")

[node name="TubeSingle2" type="Sprite2D" parent="." unique_id=1169212264]
texture_filter = 1
position = Vector2(656.00006, 541.00006)
rotation = 0.7853982
scale = Vector2(1.9901884, 1.1860994)
texture = ExtResource("3_5r5bb")

[node name="Control" type="Control" parent="." unique_id=1247156698]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="HSlider" type="HSlider" parent="Control" unique_id=1077308061]
layout_mode = 0
offset_left = 163.0
offset_top = 434.0
offset_right = 327.7622
offset_bottom = 703.6885
rotation = -0.3809694
theme_override_icons/grabber = ExtResource("6_nm65w")
theme_override_icons/grabber_highlight = ExtResource("6_nm65w")
theme_override_icons/grabber_disabled = ExtResource("6_nm65w")
theme_override_icons/tick = SubResource("GradientTexture1D_qo0lb")
theme_override_styles/slider = SubResource("StyleBoxFlat_qo0lb")
theme_override_styles/grabber_area = ExtResource("5_qo0lb")
theme_override_styles/grabber_area_highlight = ExtResource("5_qo0lb")
step = 0.1

[node name="HSlider2" type="HSlider" parent="Control" unique_id=1929208150]
layout_mode = 0
offset_left = 365.0
offset_top = 245.00003
offset_right = 456.29843
offset_bottom = 348.488
rotation = -0.06355122
theme_override_icons/grabber = ExtResource("6_nm65w")
theme_override_icons/grabber_highlight = ExtResource("6_nm65w")
theme_override_icons/grabber_disabled = ExtResource("6_nm65w")
theme_override_icons/tick = SubResource("GradientTexture1D_qo0lb")
theme_override_styles/slider = SubResource("StyleBoxFlat_qo0lb")
theme_override_styles/grabber_area = ExtResource("5_qo0lb")
theme_override_styles/grabber_area_highlight = ExtResource("5_qo0lb")
step = 0.1

[node name="HSlider3" type="HSlider" parent="Control" unique_id=1876668674]
layout_mode = 0
offset_left = 616.0
offset_top = 240.99998
offset_right = 707.29846
offset_bottom = 344.48798
rotation = 1.530611
theme_override_icons/grabber = ExtResource("6_nm65w")
theme_override_icons/grabber_highlight = ExtResource("6_nm65w")
theme_override_icons/grabber_disabled = ExtResource("6_nm65w")
theme_override_icons/tick = SubResource("GradientTexture1D_qo0lb")
theme_override_styles/slider = SubResource("StyleBoxFlat_qo0lb")
theme_override_styles/grabber_area = ExtResource("5_qo0lb")
theme_override_styles/grabber_area_highlight = ExtResource("5_qo0lb")
step = 0.1

[node name="HSlider4" type="HSlider" parent="Control" unique_id=992471171]
layout_mode = 0
offset_left = 533.0
offset_top = 15.999985
offset_right = 624.29846
offset_bottom = 119.487976
rotation = -0.81714773
theme_override_icons/grabber = ExtResource("6_nm65w")
theme_override_icons/grabber_highlight = ExtResource("6_nm65w")
theme_override_icons/grabber_disabled = ExtResource("6_nm65w")
theme_override_icons/tick = SubResource("GradientTexture1D_qo0lb")
theme_override_styles/slider = SubResource("StyleBoxFlat_qo0lb")
theme_override_styles/grabber_area = ExtResource("5_qo0lb")
theme_override_styles/grabber_area_highlight = ExtResource("5_qo0lb")
step = 0.1

[node name="HSlider5" type="HSlider" parent="Control" unique_id=249392670]
layout_mode = 0
offset_left = 771.0
offset_top = 458.0
offset_right = 884.51904
offset_bottom = 561.488
rotation = -0.26240075
theme_override_icons/grabber = ExtResource("6_nm65w")
theme_override_icons/grabber_highlight = ExtResource("6_nm65w")
theme_override_icons/grabber_disabled = ExtResource("6_nm65w")
theme_override_icons/tick = SubResource("GradientTexture1D_qo0lb")
theme_override_styles/slider = SubResource("StyleBoxFlat_qo0lb")
theme_override_styles/grabber_area = ExtResource("5_qo0lb")
theme_override_styles/grabber_area_highlight = ExtResource("5_qo0lb")
step = 0.1

[node name="FG" type="Sprite2D" parent="." unique_id=528689165]
modulate = Color(1, 1, 1, 0)
z_index = 100
position = Vector2(580, 357)
scale = Vector2(21.117188, 18.492188)
texture = SubResource("GradientTexture2D_pxthx")

[node name="Water1" type="CPUParticles2D" parent="." unique_id=1480175112]
position = Vector2(522, 189.99998)
rotation = 0.83767176
scale = Vector2(2.608225, 2.608225)
amount = 5
preprocess = 0.86
explosiveness = 0.7
randomness = 0.39
lifetime_randomness = 0.2
emission_shape = 3
emission_rect_extents = Vector2(14.935, 1)
scale_amount_min = 10.0
scale_amount_max = 10.0
color = Color(0.0026244735, 0.20078826, 0.79923546, 1)
hue_variation_min = 0.28
hue_variation_max = 0.28

[node name="Water2" type="CPUParticles2D" parent="." unique_id=975852683]
position = Vector2(487, 137.99997)
rotation = 0.83630866
scale = Vector2(1.615, 1.615)
amount = 5
preprocess = 0.86
explosiveness = 0.7
randomness = 0.39
lifetime_randomness = 0.2
emission_shape = 3
emission_rect_extents = Vector2(14.935, 1)
scale_amount_min = 10.0
scale_amount_max = 10.0
color = Color(0.0026244735, 0.20078826, 0.79923546, 1)
hue_variation_min = 0.28
hue_variation_max = 0.28

[node name="Steam" type="CPUParticles2D" parent="." unique_id=828040474]
z_index = -1
position = Vector2(113.000015, 493)
rotation = 1.2157785
scale = Vector2(2.608225, 2.608225)
amount = 228
preprocess = 0.86
randomness = 0.39
lifetime_randomness = 0.2
emission_shape = 3
emission_rect_extents = Vector2(14.935, 1)
gravity = Vector2(0, -1000)
initial_velocity_max = 130.95
scale_amount_min = 2.0
scale_amount_max = 20.0
hue_variation_min = 0.28
hue_variation_max = 0.28
